# encore

./: .gitattributes  .gitignore  .prettierrc.toml  .reviewdog.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPING.md  HACKING.md  README.md  RENCORE.md  SECURITY.md  Taskfile.yml  callstack_formatter.py  check.bash  clippy.toml  context7.json  custom-dashboard.html  devbuild.sh  go.mod  go.sum  go_llm_instructions.txt  interactive_callstack.py  make.bash  mise.toml  output_callstack.html  package-lock.json  simple-omit_callstack.html  simple_callstack.html  simple_callstack.py  test-encore.sh  testing_callstack.html  theme.html  ts_llm_instructions.txt  upstream.ref
miniredis/: .gitignore  Cargo.toml
miniredis/src/: connection.rs  db.rs  dispatch.rs  error.rs  frame.rs  geo.rs  hll.rs  keys.rs  lib.rs  pubsub.rs  server.rs  types.rs
miniredis/src/cmd/: client.rs  cluster.rs  connection.rs  generic.rs  geo.rs  hash.rs  hll.rs  list.rs  mod.rs  object.rs  pubsub.rs  scripting.rs  server.rs  set.rs  sorted_set.rs  stream.rs  string.rs  transactions.rs
miniredis/testdata/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
miniredis/tests/: cmd_auth.rs  cmd_bit.rs  cmd_client.rs  cmd_cluster.rs  cmd_connection.rs  cmd_generic.rs  cmd_geo.rs  cmd_hash.rs  cmd_hll.rs  cmd_list.rs  cmd_misc.rs  cmd_pubsub.rs  cmd_resp3.rs  cmd_scripting.rs  cmd_server.rs  cmd_set.rs  cmd_sorted_set.rs  cmd_stream.rs  cmd_string.rs  cmd_tls.rs  cmd_transactions.rs  direct_api.rs  smoke.rs
miniredis/tests/helpers/: mod.rs
miniredis/tests/integration-go/: Makefile  README.md  cluster_test.go  command_test.go  connection_test.go  ephemeral.go  generic_test.go  geo_test.go  go.mod  go.sum  hash_test.go  hll_test.go  list_test.go  pubsub_test.go  script_test.go  server_test.go  set_test.go  sorted_set_test.go  stream_test.go  string_test.go  test.go  tls.go  tx_test.go
runtimes/core/: Cargo.toml  build.rs
runtimes/core/resources/test/: infra.config.json  runtime.pb
runtimes/core/src/: base32.rs  infracfg.rs  lib.rs  names.rs  proccfg.rs  shutdown.rs
runtimes/core/src/api/: call.rs  endpoint.rs  error.rs  http.rs  http_server.rs  httputil.rs  manager.rs  mod.rs  paths.rs  pvalue.rs  server.rs  static_assets.rs  websocket.rs  websocket_client.rs
runtimes/core/src/cache/: client.rs  client_tests.rs  error.rs  manager.rs  memcluster.rs  memcluster_tests.rs  miniredis.rs  mod.rs  noop.rs  pool.rs  pool_tests.rs  tracer.rs
runtimes/core/src/error/: conversions.rs  mod.rs
runtimes/core/src/log/: consolewriter.rs  fields.rs  levels.rs  logger.rs  mod.rs  writers.rs
runtimes/core/src/meta/: mod.rs
runtimes/core/src/metadata/: aws.rs  azure.rs  gce.rs  mod.rs
runtimes/core/src/metrics/: atomic.rs  counter.rs  gauge.rs  manager.rs  metrics.rs  mod.rs  registry.rs  system.rs  test.rs  util.rs
runtimes/core/src/model/: mod.rs
runtimes/core/src/objects/: manager.rs  mod.rs
runtimes/core/src/pubsub/: manager.rs  mod.rs  push_registry.rs
runtimes/core/src/runtime_config/: mod.rs
runtimes/core/src/secrets/: gcpsm.rs  mod.rs  provider.rs
runtimes/core/src/sqldb/: client.rs  manager.rs  mod.rs  numeric.rs  proxy.rs  transaction.rs  val.rs
runtimes/core/src/trace/: eventbuf.rs  log.rs  mod.rs  protocol.rs  time_anchor.rs
runtimes/js/: .gitignore  Cargo.toml  build.rs
runtimes/js/encore.dev/: .gitignore  .npmignore  LICENSE  README.md  app_meta.ts  meta.ts  mod.ts  package-lock.json  package.json  req_meta.ts  tsconfig.json  typedoc.json
runtimes/js/encore.dev/api/: error.ts  gateway.ts  httpstatus.ts  mod.ts  node_http.ts  stream.ts
runtimes/js/encore.dev/auth/: mod.ts
runtimes/js/encore.dev/config/: mod.ts  secrets.ts
runtimes/js/encore.dev/cron/: mod.ts
runtimes/js/encore.dev/errs/: mod.ts
runtimes/js/encore.dev/log/: mod.ts
runtimes/js/encore.dev/metrics/: README.md  example.ts  mod.ts
runtimes/js/encore.dev/pubsub/: attributes.ts  mod.ts  refs.ts  subscription.ts  topic.ts
runtimes/js/encore.dev/scripts/: postprocess-docs.mjs
runtimes/js/encore.dev/service/: mod.ts
runtimes/js/encore.dev/tracing/: mod.ts
runtimes/js/encore.dev/types/: mod.ts
runtimes/js/encore.dev/validate/: mod.ts
runtimes/js/src/: api.rs  cache.rs  cookies.rs  error.rs  gateway.rs  headers.rs  lib.rs  log.rs  meta.rs  metrics.rs  napi_util.rs  objects.rs  pubsub.rs  pvalue.rs  raw_api.rs  request_meta.rs  runtime.rs  runtime_config.rs  secret.rs  sqldb.rs  threadsafe_function.rs  websocket_api.rs
supervisor/: Cargo.toml  build.rs
supervisor/src/: config.rs  lib.rs  proxy.rs  supervisor.rs
tsparser/: Cargo.toml  build.rs
tsparser/examples/: testparse.rs
tsparser/litparser/: Cargo.toml
tsparser/litparser-derive/: Cargo.toml
tsparser/litparser-derive/src/: lib.rs
tsparser/litparser-derive/tests/: integration_tests.rs
tsparser/litparser/src/: lib.rs
tsparser/src/: exports.rs  lib.rs  resolve_utils.rs  span_err.rs  tsconfig.rs
tsparser/src/app/: mod.rs  service_discovery.rs
tsparser/src/builder/: codegen.rs  compile.rs  mod.rs  package_mgmt.rs  parse.rs  prepare.rs  test.rs  transpiler.rs
tsparser/src/codegen/: mod.rs  serde_client.rs  serde_server.rs  type_decoder.rs
tsparser/src/legacymeta/: api_schema.rs  mod.rs  schema.rs
tsparser/src/parser/: doc_comments.rs  fileset.rs  memory_resolver.rs  mod.rs  module_loader.rs  parser.rs  respath.rs  scan.rs  service_discovery.rs  universe.ts
tsparser/src/runtimeresolve/: exports.rs  mod.rs  node.rs  tsconfig.rs
tsparser/src/testutil/: mod.rs  testparse.rs  testresolve.rs  typeparse.rs
tsparser/tests/: parse_tests.rs
tsparser/tests/common/: mod.rs
tsparser/tests/testdata/: builtins.txt  cache.txt  cache_named.txt  interface_extends_validation.txt  mapped_as_clause.txt  mapped_types.txt  metrics.txt  query_header.txt  query_recursive_operator_map.txt  streams.txt  tsconfig.txt
tsparser/txtar/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
tsparser/txtar/src/: error.rs  lib.rs
tsparser/wasm/: Cargo.toml  README.md  build.rs
tsparser/wasm/src/: lib.rs
(+3320 files in other folders)
