[package]
name = "encore-tsparser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tsparser-encore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = { version = "0.141.21", features = ["typescript"] }
swc_ecma_ast = "0.110.9"
swc_ecma_visit = { version = "0.96.9", features = ["path"] }
swc_ecma_transforms_base = "0.134.30"
swc_ecma_loader = { version = "0.45.9", features = ["node", "tsc"] }
swc_atoms = "0.6.4"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }
walkdir = "2"
anyhow = "1.0.75"
rustc-hash = "1.1.0"
thiserror = "1.0.48"
clean-path = "0.2.1"
log = "0.4.20"
env_logger = "0.10.0"
txtar = { version = "1.0.0", path = "./txtar" }
litparser = { version = "0.1.0", path = "./litparser" }
litparser-derive = { version = "0.1.0", path = "./litparser-derive" }
prost = "0.12.1"
bytes = "1"
tempdir = "0.3.7"
cron-parser = "0.8.0"
chrono = "0.4.31"
regex = "1.9.5"
once_cell = "1.18.0"
handlebars = { version = "4.4.0", features = ["no_logging"] }
serde = "1.0.188"
serde_json = "1.0.107"
url = "2.4.1"
self_cell = "1.0.1"
convert_case = "0.6.0"
itertools = "0.12.0"
pathdiff = "0.2.1"
duct = "0.13.6"
os_pipe = "1.1.4"
indexmap = { version = "2.1.0", features = ["serde"] }
serde_yaml = "0.9.32"
symlink = "0.1.0"

[build-dependencies]
prost-build = { version = "0.12.1" }

[dev-dependencies]
assert_matches = "1.5.0"
