[package]
name = "encore-tsparser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tsparser-encore"
required-features = ["native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = [
    "dep:pg_query",
    "dep:walkdir",
    "dep:duct",
    "dep:symlink",
    "dep:junction",
    "dep:env_logger",
    "swc_ecma_loader/node",
    "swc_ecma_loader/tsc",
    "swc_common/tty-emitter",
]
serde-meta = []

[dependencies]
swc_ecma_parser = { version = "0.141.21", features = ["typescript"] }
swc_ecma_ast = "0.110.9"
swc_ecma_visit = { version = "0.96.9", features = ["path"] }
swc_ecma_transforms_base = "0.134.30"
swc_ecma_loader = "0.45.9"
swc_common = "0.33.8"
walkdir = { version = "2", optional = true }
anyhow = { version = "1.0.75", features = ["backtrace"] }
clean-path = "0.2.1"
log = "0.4.20"
env_logger = { version = "0.10.0", optional = true }
txtar = { version = "1.0.0", path = "./txtar" }
litparser = { version = "0.1.0", path = "./litparser" }
litparser-derive = { version = "0.1.0", path = "./litparser-derive" }
prost = "0.12.1"
tempdir = "0.3.7"
cron-parser = "0.8.0"
chrono = "0.4.31"
regex = "1.9.5"
once_cell = "1.18.0"
handlebars = { version = "4.4.0", features = ["no_logging"] }
serde = { version = "1.0.188", features = ["rc"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
url = "2.4.1"
convert_case = "0.6.0"
itertools = "0.13.0"
duct = { version = "0.13.6", optional = true }
indexmap = { version = "2.1.0", features = ["serde"] }
serde_yaml = "0.9.32"
symlink = { version = "0.1.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
junction = { version = "1.2.0", optional = true }
thiserror = "1.0.64"
matchit = "0.7.3"
semver = "1.0.24"
pg_query = { version = "6.1.1", optional = true }

[build-dependencies]
prost-build = { version = "0.12.1" }

[dev-dependencies]
assert_fs = "1.1.1"
assert_matches = "1.5.0"
insta = { version = "1.38.0", features = ["yaml", "glob"] }
once_cell = "1.19.0"
