[package]
name = "litparser-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.67"
anyhow = "1.0"
litparser = { version = "0.1.0", path = "../litparser" }
swc_ecma_parser = { version = "0.141.21", default-features = false, features = ["typescript"] }
swc_ecma_ast = "0.110.9"
swc_ecma_visit = { version = "0.96.9", features = ["path"] }
swc_ecma_transforms_base = "0.134.30"
swc_ecma_loader = { version = "0.45.9", features = ["node", "tsc"] }
swc_atoms = "0.6.4"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }

[dev-dependencies]
prettyplease = "0.2"
