[package]
name = "litparser-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.67"
anyhow = "1.0"
litparser = { version = "0.1.0", path = "../litparser" }
swc_ecma_parser = { version = "0.141.21", features = ["typescript"] }
swc_ecma_ast = "0.110.9"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }

[dev-dependencies]
prettyplease = "0.2"
