[package]
name = "tsparser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
encore-tsparser = { path = "..", default-features = false, features = ["serde-meta"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_common = "0.33.8"
console_error_panic_hook = "0.1"
